Ajustes basicos de fontes nos tiles

--- a/webpack/app/scss/_tiles.scss
+++ b/webpack/app/scss/_tiles.scss
@@ -26,6 +26,16 @@
 	}
 }
 
+.tile-subtitle {
+    color: #06acff;
+    font-size: 0.875rem !important;
+    font-weight: bold;
+    margin-bottom: 0 !important;
+}
+p.tile-description {
+    line-height: 1.875rem !important;
+}
+
 /* tile de titulo */
 .tile .outstanding-header {
     width: 100%;
