Estilos para o tile em alta

--- a/webpack/app/scss/_content.scss
+++ b/webpack/app/scss/_content.scss
@@ -100,6 +100,11 @@ p.nitfSubtitle {
   position: absolute;
   margin-top: 110px;
 }
+#media {
+    width: 1140px;
+    margin: 0 auto;
+    text-align: center;
+}
 
 #content p {
   font-size: 1.125rem;
