--- a/webpack/app/scss/_tiles.scss
+++ b/webpack/app/scss/_tiles.scss
@@ -125,7 +125,7 @@ p.tile-description {
 /* tile de foto sobreposta */
 .tile.foto-sobreposta {
     position: relative;
-    height: 370px;
+    height: 375px;
     display: flex;
 
     .tile-content {
@@ -236,7 +236,7 @@ p.tile-description {
     width: 100%!important;
     justify-content: center;
     background: #244a7c;
-    padding: 0 0 20px 0;
+    padding: 0 0 10px 0;
     margin: 0;
 
     .tile {
@@ -305,6 +305,22 @@ p.tile-description {
 
 header.inverter .search-wrapper {
   border-bottom: 1px solid hsla(0,0%,100%,.2);
+}
+
+
+/* coluna destacada */
+.colunas-destacadas .column,
+.column.colunas-destacadas {
+    outline: 20px solid #fff;
+    background-color: #f7f7f7;
+    padding: 50px 50px;
+    box-sizing: border-box;
+}
+/* coluna quadrada */
+.colunas-quadradas .column,
+.column.colunas-quadradas {
+    padding: 50px 50px;
+    box-sizing: border-box;
 }
 
 /* TOP SUBJECTS */
