--- a/webpack/app/scss/_tiles.scss
+++ b/webpack/app/scss/_tiles.scss
@@ -373,3 +373,19 @@ header.inverter .search-wrapper {
         margin: 13px;
     }
 }
+
+/* header discreto */
+.tile.tile-discreto .outstanding-header h2 {
+    font-weight: 200 !important;
+    font-size: 1rem;
+}
+.tile.tile-discreto .outstanding-header h2:before, .tile.tile-discreto .outstanding-header h2:after {
+    content: "linha";
+    background: #ccc;
+    width: 30%;
+    height: 1px;
+    font-size: 1px;
+    text-indent: -3000px;
+    margin: 13px;
+    display: inline-block;
+}
