--- a/webpack/app/scss/_header.scss
+++ b/webpack/app/scss/_header.scss
@@ -315,3 +315,14 @@ header.inverter {
     @include sprite($casinha-branca);
   }
 }
+
+/* variacao de cor do header */
+.section-fale-conosco header#main-header {
+  background-color: #244a7c;
+}
+.portaltype-collective-nitf-content header#main-header {
+  background-color: #06acff;
+}
+.section-centrais-de-conteudo header#main-header {
+  background-color: #000;
+}
