Estilos para a pagina de busca

--- a/webpack/app/padrao/brasilgovtemas.scss
+++ b/webpack/app/padrao/brasilgovtemas.scss
@@ -42,6 +42,7 @@ $footer-link: #272727;
 @import '../scss/header';
 @import '../scss/tiles';
 @import '../scss/portlets';
+@import '../scss/search';
 @import '../scss/footer';
 @import '../scss/responsive';
 @import '../scss/contrast';
