Altera icones de redes sociais e remove byline das paginas

--- a/webpack/app/scss/_footer.scss
+++ b/webpack/app/scss/_footer.scss
@@ -28,10 +28,12 @@
 		margin-bottom: 30px;
 		ul li  {
 			display: inline-block;
+			margin-right: 40px;
 		}
 		h3 {
 			font-size: 1.5rem;
 			text-transform: uppercase;
+			margin-bottom: 20px;
 		}
 	}
 
