Estilos iniciais para o tile de galeria

--- a/webpack/app/scss/_tiles.scss
+++ b/webpack/app/scss/_tiles.scss
@@ -454,3 +454,25 @@ header.inverter .search-wrapper {
     margin: 13px;
     display: inline-block;
 }
+
+/* geleria */
+.brasil-gallery-tile .gallery-title {
+    color: #333 !important;
+}
+.brasil-gallery-tile .gallery-global-information .gallery-description {
+    border-bottom: 1px solid #f7f7f7;
+    color: #333 !important;
+}
+.brasil-gallery-tile .gallery-subtitle {
+    color: #333 !important;
+}
+.brasil-gallery-tile .gallery-information {
+    color: #333 !important;
+}
+.brasil-gallery-tile .thumb-title {
+    color: #333 !important;
+}
+.brasil-gallery-tile .gallery-more {
+    background: #2969bd !important;
+    color: #fff !important;
+}
