Corrige fonte do titulo do em alta

--- a/webpack/app/scss/_tiles.scss
+++ b/webpack/app/scss/_tiles.scss
@@ -431,6 +431,7 @@ header.inverter .search-wrapper {
         text-transform: uppercase;
         white-space: nowrap;
         color: #222 !important;
+        font-size: 1rem;
     }
     .tile-header:before, .tile-header:after {
         content: "linha";
