--- a/webpack/app/scss/_contrast.scss
+++ b/webpack/app/scss/_contrast.scss
@@ -2,6 +2,46 @@
 // referenciar melhor os elementos a serem invetidos para evitar comportamentos inesperados.
 body.contraste,
 body.folder_contraste {
+  footer {
+    #portalredes-twitter {
+      @include sprite($rede-twitter-topo);
+      filter: invert(100%);
+    }
+    #portalredes-youtube {
+      @include sprite($rede-youtube-topo);
+      filter: invert(100%);
+    }
+    #portalredes-facebook {
+      @include sprite($rede-facebook-topo);
+      filter: invert(100%);
+    }
+    #portalredes-flickr {
+      @include sprite($rede-flickr-topo);
+      filter: invert(100%);
+    }
+  }
+  #portal-footer {
+    #logo-acesso.logo-acesso {
+      filter: invert(100%);
+      display: block;
+      text-indent: -3000px;
+    }
+    #logo-governo.logo-governo {
+      filter: invert(100%);
+      display: block;
+      text-indent: -3000px;
+    }
+  }
+  background-color: black;
+  border-bottom: 1px solid hsla(0,0%,100%,.2);
+  color: #fff;
+  margin-bottom: 0;
+  a, .breadcrumbSeparator {
+    color: #fff !important;
+  }
+  #breadcrumbs-home a:before {
+    filter: invert(100%)
+  }
   header,
   footer,
   //a,
@@ -78,6 +118,6 @@ body.folder_contraste {
   &.template-summary_view #content .tileItem .subtitle,
   &.template-summary_view #content .tileItem .documentByLine {
     color: #FFF;
-    background: #000 !important;
+    background: black !important;
   }
 }
