--- a/webpack/app/scss/_tiles.scss
+++ b/webpack/app/scss/_tiles.scss
@@ -341,13 +341,15 @@ p.tile-description {
     p.tile-description {
         font-size: 1.375rem !important;
     }
-    .botao-texto, .botao-texto-icone {
+    .botao-texto a, .botao-texto-icone a,
+    a.botao-texto, a.botao-texto-icone {
         border: 2px solid #fff !important;
         padding: 10px 20px;
         border-radius: 20px;
         font-size: 0.875rem !important;
     }
-    .botao-texto-icone::before {
+    .botao-texto-icone a::before,
+    a.botao-texto-icone::before{
         @include sprite($botao-com-icone);
         content: " ";
         white-space: nowrap;
