--- a/webpack/app/padrao/brasilgovtemas.scss
+++ b/webpack/app/padrao/brasilgovtemas.scss
@@ -40,6 +40,7 @@ $footer-link: #272727;
 @import '../scss/basic';
 @import '../scss/content';
 @import '../scss/header';
+@import '../scss/albuns';
 @import '../scss/tiles';
 @import '../scss/portlets';
 @import '../scss/search';
