--- a/webpack/app/scss/_basic.scss
+++ b/webpack/app/scss/_basic.scss
@@ -156,11 +156,11 @@ footer {
 
 // TODO: carregar isso do _intro.js
 .introjs-overlay {
-  position: absolute !important;
+  // position: absolute !important;
   box-sizing: content-box !important;
   z-index: 999999 !important;
-  background-color: #000 !important;
-  // opacity: 0 !important;
+  // background-color: #ffffff !important;
+  //opacity: 0 !important;
   background: -moz-radial-gradient(center,ellipse farthest-corner,rgba(0,0,0,0.4) 0,rgba(0,0,0,0.9) 100%) !important;
   background: -webkit-gradient(radial,center center,0px,center center,100%,color-stop(0%,rgba(0,0,0,0.4)),color-stop(100%,rgba(0,0,0,0.9))) !important;
   background: -webkit-radial-gradient(center,ellipse farthest-corner,rgba(0,0,0,0.4) 0,rgba(0,0,0,0.9) 100%) !important;
@@ -211,8 +211,8 @@ tr.introjs-showElement > th {
   box-sizing: content-box !important;
   position: absolute !important;
   z-index: 9999998 !important;
-  background-color: #FFF !important;
-  background-color: rgba(255,255,255,.9) !important;
+  // background-color: #000 !important;
+  // background-color: rgba(255,255,255,.9) !important;
   border: 1px solid #777 !important;
   border: 1px solid rgba(0,0,0,.5) !important;
   border-radius: 4px !important;
@@ -340,8 +340,8 @@ tr.introjs-showElement > th {
   visibility: visible !important;
   padding: 10px !important;
   background-color: white !important;
-  min-width: 200px !important;
-  max-width: 300px !important;
+  min-width: 400px !important;
+  max-width: 600px !important;
   border-radius: 3px !important;
   box-shadow: 0 1px 10px rgba(0,0,0,.4) !important;
   -webkit-transition: opacity 0.1s ease-out !important;
