Corrige area de clique das redes sociais

--- a/webpack/app/scss/_basic.scss
+++ b/webpack/app/scss/_basic.scss
@@ -84,8 +84,13 @@ h4 {
 /* icones sociais */
 #portal-redes > li {
   display: inline-block;
-  text-indent: -3000px;
   cursor: pointer;
+  a {
+    text-indent: -3000px;
+    display: inline-block;
+    width: 34px;
+    height: 33px;
+  }
 }
 
 /* icones do topo */
