Corrige o comportamento de tabelas no texto

--- a/webpack/app/scss/_content.scss
+++ b/webpack/app/scss/_content.scss
@@ -43,13 +43,13 @@
   }
   .invisible-left {
     float: left;
-    width: auto;
-    margin-left: 10vh;
+    width: auto !important;
+    margin-left: 10vh !important;
   }
   .invisible-right {
     float: right;
-    width: auto;
-    margin-right: 10vh;
+    width: auto !important;
+    margin-right: 10vh !important;
   }
 }
 
