Corrige redes sociais no tile de foto sobreposta grande

--- a/webpack/app/scss/_tiles.scss
+++ b/webpack/app/scss/_tiles.scss
@@ -227,7 +227,7 @@ p.tile-description {
         line-height: 2.188rem;
     }
 
-    a {
+    p a {
         color: #fff !important;
         background: transparent;
         border-radius: 30px;
